<resources>
    <string name="app_name">CyberpunkHelperV2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_fight">Fight</string>
    <string name="add_character">Add character</string>
    <string name="delete_character">Delete character</string>
    <string name="add_mob">Add mob</string>
    <string name="delete_mob">Delete character</string>
    <string name="name">Name</string>
    <string name="handle">Handle</string>
    <string name="age">Age</string>
    <string name="ch_points">Ch points</string>
    <string name="loading">Loading...</string>
    <string name="avatar">Avatar</string>
    <string name="stats">STATS</string>
    <string name="stats_int">INT</string>
    <string name="stats_cool">COOL</string>
    <string name="stats_luck">LUCK</string>
    <string name="stats_ref">REF</string>
    <string name="stats_tech">TECH</string>
    <string name="stats_attr">ATTR</string>
    <string name="stats_ma">MA</string>
    <string name="stats_body">BODY</string>
    <string name="stats_emp">EMP</string>
    <string name="stats_run">RUN</string>
    <string name="stats_leap">LEAP</string>
    <string name="stats_lift">LIFT</string>
    <string name="stats_save">SAVE</string>
    <string name="stats_btm">BTM</string>
    <string name="role">Role</string>

    <string name="message_dialog">"Confirm dialog"</string>
    <string name="message_delete_question">"Do you want to delete record?"</string>
    <string name="message_yes">"Yes"</string>
    <string name="message_no">"No"</string>
    <string name="message_delete">"Delete"</string>
    <string name="message_cancel">"Canceled!"</string>
    <string name="message_error">"Error!"</string>

    <string name="dices">Dices:</string>
    <string name="number_of_dices">Number of dices:</string>
    <string name="drop_it">Drop it!</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>

    <string name="armorHead">HEAD</string>
    <string name="armorTorso">TORSO</string>
    <string name="armorLArm">L.ARM</string>
    <string name="armorRArm">R.ARM</string>
    <string name="armorLLeg">L.Leg</string>
    <string name="armorRLeg">R.Leg</string>
    <string name="armor">ARMOR</string>
    <string name="generate">Generate</string>
    <string name="weapon">WEAPON</string>
    <string name="type">Type</string>
    <string name="wa">WA</string>
    <string name="conc">Conc</string>
    <string name="avail">Avail</string>
    <string name="dam">Dam</string>
    <string name="shots">Shots</string>
    <string name="rof">ROF</string>
    <string name="rel">Rel</string>
    <string name="d">D</string>
    <string name="number">number</string>
    <string name="num">Num</string>
    <string name="survival_rate">Survival rate</string>
    <string name="attack">Attack</string>

</resources>
