<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_battle"
        android:icon="@drawable/ic_battle"
        android:title="@string/action_fight"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/app_bar_add_character"
        android:title="@string/add_character"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_bar_delete_character"
        android:title="@string/delete_character"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_bar_add_mob"
        android:title="@string/add_mob"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_bar_delete_mob"
        android:title="@string/delete_mob"
        app:showAsAction="never"/>

</menu>