<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/buttonShapeColor"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/add_character"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/avatar"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:text="@string/name"
                    style="@style/TextViewBasic"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:inputType="text"
                    android:hint="@string/name"
                    style="@style/EditTextBasic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHandle"
                    android:text="@string/handle"
                    style="@style/TextViewBasic"/>

                <EditText
                    android:id="@+id/editTextHandle"
                    android:inputType="text"
                    android:hint="@string/handle"
                    style="@style/EditTextBasic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRole"
                    android:text="@string/role"
                    style="@style/TextViewBasic" />

                <EditText
                    android:id="@+id/editTextRole"
                    android:hint="@string/role"
                    android:inputType="text"
                    style="@style/EditTextBasic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAge"
                    android:text="@string/age"
                    style="@style/TextViewBasic" />

                <EditText
                    android:id="@+id/editTextAge"
                    android:hint="@string/age"
                    android:inputType="number"
                    style="@style/EditTextBasic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChPoints"
                    android:text="@string/ch_points"
                    style="@style/TextViewBasic"/>

                <EditText
                    android:id="@+id/editTextChPoints"
                    android:hint="@string/ch_points"
                    android:inputType="number"
                    style="@style/EditTextBasic"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/stats"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewInt"
                    android:text="@string/stats_int"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextInt"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewCool"
                    android:text="@string/stats_cool"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextCool"
                    style="@style/EditTextStats"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewRef"
                    android:text="@string/stats_ref"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextRef"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewTech"
                    android:text="@string/stats_tech"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextTech"
                    style="@style/EditTextStats"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewAttr"
                    android:text="@string/stats_attr"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextAttr"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewLuck"
                    android:text="@string/stats_luck"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextLuck"
                    style="@style/EditTextStats"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewMa"
                    android:text="@string/stats_ma"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextMa"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewBody"
                    android:text="@string/stats_body"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextBody"
                    style="@style/EditTextStats"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewEmp"
                    android:text="@string/stats_emp"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextEmp"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewRun"
                    android:text="@string/stats_run"
                    style="@style/TextViewStats"/>

                <TextView
                    android:id="@+id/editTextRun"
                    style="@style/StatsSetText"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewLeap"
                    android:text="@string/stats_leap"
                    style="@style/TextViewStats"/>

                <TextView
                    android:id="@+id/editTextLeap"
                    style="@style/StatsSetText"/>

                <TextView
                    android:id="@+id/textViewLift"
                    android:text="@string/stats_lift"
                    style="@style/TextViewStats"/>

                <TextView
                    android:id="@+id/editTextLift"
                    style="@style/StatsSetText"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewBtm"
                    android:text="@string/stats_btm"
                    style="@style/TextViewStats"/>

                <TextView
                    android:id="@+id/editTextBtm"
                    style="@style/StatsSetText"/>

                <TextView
                    android:id="@+id/textViewSave"
                    android:text="@string/stats_save"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextSave"
                    style="@style/EditTextStats"/>

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/armor"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/textViewArmorHead"
                android:text="@string/armorHead"
                style="@style/TextViewStats"/>

            <EditText
                android:id="@+id/editTextArmorHead"
                style="@style/EditTextStats"/>

            <TextView
                android:id="@+id/textViewArmorTorso"
                android:text="@string/armorTorso"
                style="@style/TextViewStats"/>

            <EditText
                android:id="@+id/editTextArmorTorso"
                style="@style/EditTextStats"/>

        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewArmorLArm"
                    android:text="@string/armorLArm"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextArmorLArm"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewArmorRArm"
                    android:text="@string/armorRArm"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextArmorRArm"
                    style="@style/EditTextStats"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textViewArmorLLeg"
                    android:text="@string/armorLLeg"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextArmorLLeg"
                    style="@style/EditTextStats"/>

                <TextView
                    android:id="@+id/textViewArmorRLeg"
                    android:text="@string/armorRLeg"
                    style="@style/TextViewStats"/>

                <EditText
                    android:id="@+id/editTextArmorRLeg"
                    style="@style/EditTextStats"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/buttonShapeColor"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginHorizontal="2dp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginHorizontal="2dp"/>

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginHorizontal="2dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>