<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonShapeColor"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dices"
                android:textColor="@color/grayDark"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/number_of_dices"
                android:textColor="@color/grayDark"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerDices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spinnerNumberDices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/twDiceCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@color/yellowColor"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/buttonDrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drop_it"
            android:layout_margin="8dp"
            android:textColor="@color/white"/>
    </LinearLayout>
</FrameLayout>

